// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CorrectInput render renders correctly with correct as false 1`] = `
<Component
  classes={
    Object {
      "box": "Component-box-5",
      "correct": "Component-correct-3",
      "crInput": "Component-crInput-2",
      "incorrect": "Component-incorrect-4",
      "input": "Component-input-1",
      "notchedOutline": "Component-notchedOutline-7",
      "outlinedInput": "Component-outlinedInput-6",
    }
  }
  correct={false}
  disabled={false}
  onChange={[MockFunction]}
  value="Cow"
  variant="outlined"
/>
`;

exports[`CorrectInput render renders correctly with default props 1`] = `
<Component
  classes={
    Object {
      "box": "Component-box-5",
      "correct": "Component-correct-3",
      "crInput": "Component-crInput-2",
      "incorrect": "Component-incorrect-4",
      "input": "Component-input-1",
      "notchedOutline": "Component-notchedOutline-7",
      "outlinedInput": "Component-outlinedInput-6",
    }
  }
  correct={false}
  disabled={false}
  onChange={[MockFunction]}
  value="Cow"
  variant="outlined"
/>
`;

exports[`CorrectInput render renders correctly with disabled prop as true 1`] = `
<Component
  classes={
    Object {
      "box": "Component-box-5",
      "correct": "Component-correct-3",
      "crInput": "Component-crInput-2",
      "incorrect": "Component-incorrect-4",
      "input": "Component-input-1",
      "notchedOutline": "Component-notchedOutline-7",
      "outlinedInput": "Component-outlinedInput-6",
    }
  }
  correct={false}
  disabled={true}
  onChange={[MockFunction]}
  value="Cow"
  variant="outlined"
/>
`;
